force-app/main/default/objects/FundingAwardActual__c/FundingAwardActual__c.object-meta.xml
<CustomObject>
    <description>Object to store details of actuals against award or baseline against a funding award as part of monthly reporting</description>
    <label>Funding Award Actual</label>
    <nameField>
        <displayFormat>ACT-{00000}</displayFormat>
        <label>Funding Award Actual Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Award Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>