force-app/main/default/objects/FundingAwardActual__c/fields/A_A__c.field-meta.xml
<CustomField>
    <fullName>A_A__c</fullName>
    <formula>IF(ISNULL(Grant_Capital_Spend__c)  || Grant_Capital_Spend__c = 0,0, (Grant_Admin_Spend__c +  Grant_Ancillary_Spend__c) /  Grant_Capital_Spend__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Grant Admin Spend + Grant Ancillary Spend) / Grant Capital Spend

Unless Grant Capital Spend is 0 then it gives 0</inlineHelpText>
    <label>A&amp;A %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>