force-app/main/default/objects/FundingAwardActual__c/fields/Actuals_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actuals_End_Date__c</fullName>
    <description>End date of actuals report</description>
    <inlineHelpText>Normally the last day of the month</inlineHelpText>
    <label>Actuals End Date</label>
    <type>Date</type>
</CustomField>