force-app/main/default/objects/FundingAwardActual__c/fields/Actuals_Month__c.field-meta.xml
<CustomField>
    <fullName>Actuals_Month__c</fullName>
    <formula>CASE( MONTH( Actuals_Start_Date__c ),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;Unk&quot;
)
&amp; &quot; &quot; &amp;
TEXT(YEAR(Actuals_Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actuals Month</label>
    <type>Text</type>
</CustomField>