force-app/main/default/objects/FundingAwardActual__c/fields/Actuals_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actuals_Start_Date__c</fullName>
    <description>Start date of Actuals report</description>
    <inlineHelpText>Normally the first of the month</inlineHelpText>
    <label>Actuals Start Date</label>
    <type>Date</type>
</CustomField>