force-app/main/default/objects/FundingAwardActual__c/fields/Change_Description__c.field-meta.xml
<CustomField>
    <fullName>Change_Description__c</fullName>
    <inlineHelpText>Provide a description explaining the reasons for the amendments made to the funding award.</inlineHelpText>
    <label>Change Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>