force-app/main/default/objects/FundingAwardActual__c/fields/Co_funding_A_A_spend__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_A_A_spend__c</fullName>
    <label>Co-funding A&amp;A spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>