force-app/main/default/objects/FundingAwardActual__c/fields/Co_funding_Capital_Spend__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Capital_Spend__c</fullName>
    <inlineHelpText>towards homes</inlineHelpText>
    <label>Co-funding Capital Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>