force-app/main/default/objects/FundingAwardActual__c/fields/Co_funding_total_spend__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_total_spend__c</fullName>
    <inlineHelpText>Towards homes going to and beyond EPC B</inlineHelpText>
    <label>Co-funding total spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>