force-app/main/default/objects/FundingAwardActual__c/fields/Combined_A_A_spend__c.field-meta.xml
<CustomField>
    <fullName>Combined_A_A_spend__c</fullName>
    <inlineHelpText>Combined A&amp;A spend (SP only)</inlineHelpText>
    <label>Combined A&amp;A spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>