force-app/main/default/objects/FundingAwardActual__c/fields/Combined_Capital_Spend__c.field-meta.xml
<CustomField>
    <fullName>Combined_Capital_Spend__c</fullName>
    <inlineHelpText>Enter the cumulative actual/forecast Capital spend per month, including both grant and co-funding</inlineHelpText>
    <label>Combined Capital Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>