force-app/main/default/objects/FundingAwardActual__c/fields/Cumulative_Grant_Claim_received__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Grant_Claim_received__c</fullName>
    <inlineHelpText>This field is auto calculated as the cumulative sum of the amount of grant funding you have received, or expect to receive, from DESNZ.</inlineHelpText>
    <label>Cumulative Grant Claim received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>