force-app/main/default/objects/FundingAwardActual__c/fields/Current_Detail__c.field-meta.xml
<CustomField>
    <fullName>Current_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows restriction on page layout to records where box ticked. To be managed by flow</description>
    <label>Current Detail</label>
    <type>Checkbox</type>
</CustomField>