force-app/main/default/objects/FundingAwardActual__c/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <label>Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipName>Actuals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>