force-app/main/default/objects/FundingAwardActual__c/fields/Grant_Ancillary_Spend__c.field-meta.xml
<CustomField>
    <fullName>Grant_Ancillary_Spend__c</fullName>
    <label>Grant Ancillary Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>