force-app/main/default/objects/FundingAwardActual__c/fields/Grant_Capital_Spend__c.field-meta.xml
<CustomField>
    <fullName>Grant_Capital_Spend__c</fullName>
    <inlineHelpText>Enter the cumulative actual/forecast Capital spend per month, from grant only</inlineHelpText>
    <label>Grant Capital Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>