force-app/main/default/objects/FundingAwardActual__c/fields/Grant_Claim_Received_per_month_delivery__c.field-meta.xml
<CustomField>
    <fullName>Grant_Claim_Received_per_month_delivery__c</fullName>
    <description>Grant Claim Received per month delivery</description>
    <inlineHelpText>Enter the amount of grant funding you have received/expect to receive, from SHDF at the end of each month. Needs to be simplified to make it easy for GRs to understand how it works/ what it means. Do not allow GRs to put in more money across the scheme than their grant award amount. Is this needed if the drawdowns have a separate section (finance)</inlineHelpText>
    <label>Grant Claim Received per month delivery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>