force-app/main/default/objects/FundingAwardActual__c/fields/No_of_Homes_All_Installations_Completed__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_All_Installations_Completed__c</fullName>
    <description>KPI 4 - No. of Homes with all Installations Completed</description>
    <inlineHelpText>KPI 4 - No. of Homes with all Installations Completed</inlineHelpText>
    <label>No. of Homes All Installations Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>