force-app/main/default/objects/FundingAwardActual__c/fields/No_of_Homes_Ready_for_Installs_to_Start__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_Ready_for_Installs_to_Start__c</fullName>
    <description>KPI 2 - No. of Homes Ready for Installs to Start</description>
    <inlineHelpText>KPI 2 - No. of Homes Ready for Installs to Start</inlineHelpText>
    <label>No. of Homes Ready for Installs to Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>