force-app/main/default/objects/FundingAwardActual__c/fields/No_of_Homes_to_EPC_C__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_to_EPC_C__c</fullName>
    <description>No. of Homes to EPC C - Cumulative, derive from post-installation SAP scores</description>
    <inlineHelpText>No. of Homes to EPC C - Cumulative, derive from post-installation SAP scores</inlineHelpText>
    <label>No. of Homes to EPC C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>