force-app/main/default/objects/FundingAwardActual__c/fields/Parent_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Parent_Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to current baseline that theses details relate to</description>
    <label>Parent Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Funding Award Actual</relationshipLabel>
    <relationshipName>Update_Details</relationshipName>
    <type>Lookup</type>
</CustomField>