force-app/main/default/objects/FundingAwardActual__c/fields/Parent_Baseline_Version__c.field-meta.xml
<CustomField>
    <fullName>Parent_Baseline_Version__c</fullName>
    <formula>Parent_Baseline__r.Baseline_Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Baseline Version</label>
    <type>Text</type>
</CustomField>