force-app/main/default/objects/FundingAwardActual__c/fields/Parent_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Parent_Deadline_Date__c</fullName>
    <formula>Parent_Funding_Award_Update__r.Update_Deadline_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Deadline Date</label>
    <type>Date</type>
</CustomField>