force-app/main/default/objects/FundingAwardActual__c/fields/Parent_Funding_Award_Update__c.field-meta.xml
<CustomField>
    <fullName>Parent_Funding_Award_Update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>One-to-One Relationship with parent Update record</description>
    <label>Parent Funding Award Update</label>
    <referenceTo>FundingAwardUpdate__c</referenceTo>
    <relationshipLabel>Funding Award Actual</relationshipLabel>
    <relationshipName>Actuals</relationshipName>
    <type>Lookup</type>
</CustomField>