force-app/main/default/objects/FundingAwardActual__c/fields/Parent_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_Update_Status__c</fullName>
    <label>Parent Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Resubmission Requested</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>GR Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>