force-app/main/default/objects/FundingAwardActual__c/fields/Record_type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_type_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record type Name</label>
    <type>Text</type>
</CustomField>