force-app/main/default/objects/FundingAwardActual__c/fields/Related_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Related_Forecast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Forecast</label>
    <referenceTo>FundingAwardForecast__c</referenceTo>
    <relationshipLabel>Related Actual</relationshipLabel>
    <relationshipName>Funding_Award_Actual</relationshipName>
    <type>Lookup</type>
</CustomField>