force-app/main/default/objects/FundingAwardActual__c/fields/Total_Grant_funding_toward_off_gas_LCH__c.field-meta.xml
<CustomField>
    <fullName>Total_Grant_funding_toward_off_gas_LCH__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Grant funding toward off-gas LCH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>