force-app/main/default/objects/FundingAwardActual__c/fields/Total_Homes_treated__c.field-meta.xml
<CustomField>
    <fullName>Total_Homes_treated__c</fullName>
    <formula>Parent_Baseline__r.No_of_Homes_Treated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Homes Treated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>