force-app/main/default/objects/FundingAwardActual__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Funding_Award__c</columns>
    <columns>Parent_Baseline_Version__c</columns>
    <columns>Parent_Funding_Award_Update__c</columns>
    <columns>Related_Forecast__c</columns>
    <columns>No_of_Homes_Completed__c</columns>
    <columns>Actuals_Month__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>