force-app/main/default/objects/FundingAwardActual__c/listViews/LG_Funding_Award_Actuals.listView-meta.xml
<ListView>
    <fullName>LG_Funding_Award_Actuals</fullName>
    <columns>NAME</columns>
    <columns>Funding_Award__c</columns>
    <columns>Parent_Funding_Award_Update__c</columns>
    <columns>Related_Forecast__c</columns>
    <columns>Grant_Admin_Spend__c</columns>
    <columns>Grant_Ancillary_Spend__c</columns>
    <columns>Grant_Capital_Spend__c</columns>
    <columns>No_of_Homes_Validated__c</columns>
    <columns>No_of_Homes_Assessed__c</columns>
    <columns>No_of_Homes_Started_Installations__c</columns>
    <columns>No_of_Homes_Treated_at_Least_1_Measure__c</columns>
    <columns>No_of_Homes_Completed__c</columns>
    <columns>No_of_Homes_to_EPC_C__c</columns>
    <columns>Actuals_Month__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Funding_Award__c</field>
        <operation>contains</operation>
        <value>WHLG</value>
    </filters>
    <label>LG Funding Award Actuals</label>
</ListView>